--- a/snippets/STGNN_v2.ipynb
+++ b/snippets/STGNN_v2.ipynb
@@ -73,7 +73,6 @@
    "source": [
     "# def load_dataset(filepath, feature_names, target_name='target', batch_size=batchsize, shuffle=False, train=True):\n",
     "def load_dataset(filepath, feature_names, num_timesteps ,target_name='target', shuffle=False, train=True):\n",
-    "    # features = load_time_series_data(filepath, feature_names)\n",
     "    data = pd.read_csv(filepath)\n",
     "    features = data[feature_names].values\n",
     "    print(features.shape)\n",
@@ -168,24 +167,22 @@
     "        return output + self.bias\n",
     "\n",
     "class STGNN(nn.Module):\n",
-    "    def __init__(self, num_features, num_nodes, hidden_size, num_layers, dropout=0.5):\n",
+    "    def __init__(self, num_features, num_nodes, hidden_size, num_layers,  num_timesteps=num_timesteps_train, dropout=0.5):\n",
     "        super(STGNN, self).__init__()\n",
     "        self.gc1 = GraphConvolution(num_features, hidden_size)\n",
-    "        # Now the input_size to LSTM should consider all nodes as part of the sequence\n",
-    "        self.lstm = nn.LSTM(input_size=num_nodes * hidden_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True, dropout=dropout)\n",
-    "        self.fc = nn.Linear(hidden_size, num_nodes * num_timesteps * 1)  # 修改输出大小\n",
-    "        \n",
+    "        self.lstm = nn.LSTM(input_size=hidden_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True, dropout=dropout)\n",
+    "        self.fc = nn.Linear(hidden_size, 1)  # Assuming the target is per node per timestep\n",
+    "\n",
     "    def forward(self, x, adj):\n",
-    "        # Apply the graph convolution to each time step\n",
-    "        batch_size, num_timesteps, num_nodes, num_features = x.shape\n",
-    "        x = x.view(batch_size * num_timesteps, num_nodes, num_features)\n",
+    "        # Apply the graph convolution only once per batch\n",
+    "        x = x.mean(dim=1)  # Average over time to get a single representation per node\n",
     "        x = F.relu(self.gc1(x, adj))\n",
-    "        x = x.view(batch_size, num_timesteps, -1)  # Flatten all node features into the feature dimension\n",
+    "        # Repeat the graph convolution output for each timestep\n",
+    "        x = x.unsqueeze(1).repeat(1, num_timesteps, 1)\n",
     "        # Process sequences using LSTM\n",
-    "        x, _ = self.lstm(x)  # LSTM expects [batch_size, seq_length, input_size]\n",
-    "        # Take the output from the last time step and reshape it\n",
-    "        x = self.fc(x[:, -1, :])\n",
-    "        x = x.view(batch_size, num_timesteps, num_nodes, 1)  # Reshape to desired output shape\n",
+    "        x, _ = self.lstm(x)\n",
+    "        x = self.fc(x)\n",
+    "        \n",
     "        return x"
    ]
   },
@@ -296,7 +293,7 @@
     }
    ],
    "source": [
-    "eval_loader = load_dataset(f'{inputdir}eval_dataset_constructed_new.csv', feature_names)\n",
+    "eval_loader = load_dataset(f'{inputdir}eval_dataset_constructed_new.csv', feature_names, num_timesteps=num_timesteps_eval)\n",
     "# # test_loader = load_dataset(f'{inputdir}test_dataset_constructed_x.csv', feature_names, train=False)"
    ]
   },
