--- a/snippets/temporal_data_process_STGNN.ipynb
+++ b/snippets/temporal_data_process_STGNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,9 @@
     "#     print(\"CUDA is not available.\")\n",
     "# Directory for data and logs\n",
     "node_num = 4634\n",
-    "filter_num = 1250\n",
+    "# filter_num = 1250\n",
     "# filter_num = 1500\n",
+    "filter_num = 0\n",
     "\n",
     "inputdir = '../data/'\n",
     "spatial_data = '../data/processed/graph_data.npz'\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,19 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_and_save_data():\n",
-    "    train_data = pd.read_csv(f'{inputdir}loop_sensor_train.csv')\n",
-    "    train_data = replace_iu_ac(train_data)\n",
-    "    train_data = timestep_construct_optimized(train_data)\n",
-    "    train_dataset = data_to_tensor(train_data)\n",
-    "    train_df = tensor_dataset_to_dataframe(train_dataset, feature_names)\n",
-    "    # train_df = test_and_add_constructed_features(train_data)\n",
-    "    # train_df.to_csv(f'{precesseddir}train_dataset_stgnn.csv', index=False)\n",
-    "    train_df.to_csv(f'{constructed_dir}train_dataset_constructed_{filter_num}.csv', index=False)    \n",
+    "    # train_data = pd.read_csv(f'{inputdir}loop_sensor_train.csv')\n",
+    "    # train_data = replace_iu_ac(train_data)\n",
+    "    # train_data = timestep_construct_optimized(train_data)\n",
+    "    # train_dataset = data_to_tensor(train_data)\n",
+    "    # train_df = tensor_dataset_to_dataframe(train_dataset, feature_names)\n",
+    "    # # train_df = test_and_add_constructed_features(train_data)\n",
+    "    # # train_df.to_csv(f'{precesseddir}train_dataset_stgnn.csv', index=False)\n",
+    "    # train_df.to_csv(f'{constructed_dir}train_dataset_constructed_{filter_num}.csv', index=False)    \n",
     "     \n",
     "    # eval_data = pd.read_csv(f'{inputdir}loop_sensor_eval.csv')\n",
     "    # eval_data = replace_iu_ac(eval_data)\n",
@@ -251,35 +252,49 @@
     "    # test_data_x = replace_iu_ac(test_data_x)\n",
     "    # test_dataset_x = data_to_tensor(test_data_x, train=0)\n",
     "    # test_df = tensor_dataset_to_dataframe(test_dataset_x, feature_names)   \n",
-    "    # test_df.to_csv(f'{precesseddir}test_dataset_stgnn_x.csv', index=False)   "
+    "    # test_df.to_csv(f'{precesseddir}test_dataset_stgnn_x.csv', index=False)   \n",
+    "    \n",
+    "    eval_data = pd.read_csv(f'{inputdir}loop_sensor_eval.csv')\n",
+    "    eval_data = replace_iu_ac(eval_data)\n",
+    "    eval_data = timestep_construct_optimized(eval_data)\n",
+    "    eval_dataset = data_to_tensor(eval_data)\n",
+    "    eval_df = tensor_dataset_to_dataframe(eval_dataset, feature_names)    \n",
+    "    eval_df.to_csv(f'{constructed_dir}eval_dataset_constructed_new.csv', index=False)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数量大于1250的时间步总数: 15029\n",
+      "数量大于0的时间步总数: 307\n",
       "Number of nodes: 4634\n",
-      "total number of processed data should be: 69644386\n"
+      "total number of processed data should be: 1422638\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing time steps: 100%|██████████| 15029/15029 [2:06:10<00:00,  1.99it/s] \n"
+      "Processing time steps:   0%|          | 0/307 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing time steps: 100%|██████████| 307/307 [00:03<00:00, 79.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows in data: 69644386\n"
+      "Number of rows in data: 1422638\n"
      ]
     }
    ],
@@ -289,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
