--- a/snippets/temporal_data_process_STGNN_eval.ipynb
+++ b/snippets/temporal_data_process_STGNN_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,10 +178,10 @@
     "    etat_barre_encoded = encode_categorical(data, 'etat_barre', 4)\n",
     "    # Process time features\n",
     "    data = process_time_features(data, 't_1h')\n",
-    "    data['t_1h'] = data['t_1h'].to_numpy()\n",
+    "    # data['t_1h'] = data['t_1h'].to_numpy()\n",
     "    # Combine features into a single tensor\n",
     "    features = torch.cat([\n",
-    "        torch.tensor(data[['iu_ac', 't_1h', 'hour_sin', 'hour_cos', 'day_of_week_sin', 'day_of_week_cos', 'month_sin', 'month_cos', 'constructed']].values).float(),\n",
+    "        torch.tensor(data[['iu_ac', 'hour_sin', 'hour_cos', 'day_of_week_sin', 'day_of_week_cos', 'month_sin', 'month_cos', 'constructed']].values).float(),\n",
     "        etat_barre_encoded\n",
     "    ], dim=1)\n",
     "\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,8 +204,7 @@
     "        targets = tensor_dataset.tensors[1]\n",
     "    else:\n",
     "        targets = None\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # 将特征张量转换为 DataFrame\n",
     "    features_df = pd.DataFrame(features.numpy(), columns=feature_names)\n",
     "    \n",
@@ -217,20 +216,28 @@
     "    \n",
     "    return features_df\n",
     "\n",
-    "\n",
     "feature_names = [\n",
-    "    'iu_ac','t_1h',\n",
+    "    'iu_ac',\n",
     "    'hour_sin', 'hour_cos', \n",
     "    'day_of_week_sin', 'day_of_week_cos', \n",
     "    'month_sin', 'month_cos',\n",
     "    'etat_barre_0', 'etat_barre_1', 'etat_barre_2', 'etat_barre_3',\n",
     "    'constructed'\n",
-    "]\n"
+    "]\n",
+    "\n",
+    "# feature_names = [\n",
+    "#     'iu_ac','t_1h',\n",
+    "#     'hour_sin', 'hour_cos', \n",
+    "#     'day_of_week_sin', 'day_of_week_cos', \n",
+    "#     'month_sin', 'month_cos',\n",
+    "#     'etat_barre_0', 'etat_barre_1', 'etat_barre_2', 'etat_barre_3',\n",
+    "#     'constructed'\n",
+    "# ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,14 +261,14 @@
     "    eval_data = pd.read_csv(f'{inputdir}loop_sensor_eval.csv')\n",
     "    eval_data = replace_iu_ac(eval_data)\n",
     "    eval_data = timestep_construct_optimized(eval_data)\n",
-    "    eval_dataset = data_to_tensor(eval_data)   \n",
+    "    eval_dataset = data_to_tensor(eval_data)\n",
     "    eval_df = tensor_dataset_to_dataframe(eval_dataset, feature_names)    \n",
     "    eval_df.to_csv(f'{constructed_dir}eval_dataset_constructed_t_1h.csv', index=False)     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +284,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing time steps: 100%|██████████| 307/307 [00:03<00:00, 96.76it/s] \n"
+      "Processing time steps: 100%|██████████| 307/307 [00:05<00:00, 56.01it/s]\n"
      ]
     },
     {
@@ -289,15 +296,15 @@
     },
     {
      "ename": "TypeError",
-     "evalue": "can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint8, and bool.",
+     "evalue": "'tuple' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprocess_and_save_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[28], line 21\u001b[0m, in \u001b[0;36mprocess_and_save_data\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m eval_data \u001b[38;5;241m=\u001b[39m replace_iu_ac(eval_data)\n\u001b[1;32m     20\u001b[0m eval_data \u001b[38;5;241m=\u001b[39m timestep_construct_optimized(eval_data)\n\u001b[0;32m---> 21\u001b[0m eval_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mdata_to_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43meval_data\u001b[49m\u001b[43m)\u001b[49m   \n\u001b[1;32m     22\u001b[0m eval_df \u001b[38;5;241m=\u001b[39m tensor_dataset_to_dataframe(eval_dataset, feature_names)    \n\u001b[1;32m     23\u001b[0m eval_df\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconstructed_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124meval_dataset_constructed_t_1h.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "Cell \u001b[0;32mIn[26], line 38\u001b[0m, in \u001b[0;36mdata_to_tensor\u001b[0;34m(data, train)\u001b[0m\n\u001b[1;32m     35\u001b[0m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt_1h\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt_1h\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m# Combine features into a single tensor\u001b[39;00m\n\u001b[1;32m     37\u001b[0m features \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat([\n\u001b[0;32m---> 38\u001b[0m     \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43miu_ac\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mt_1h\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhour_sin\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhour_cos\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mday_of_week_sin\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mday_of_week_cos\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmonth_sin\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmonth_cos\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mconstructed\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mfloat(),\n\u001b[1;32m     39\u001b[0m     etat_barre_encoded\n\u001b[1;32m     40\u001b[0m ], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m train:\n\u001b[1;32m     43\u001b[0m     targets \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues)\u001b[38;5;241m.\u001b[39mfloat()\n",
-      "\u001b[0;31mTypeError\u001b[0m: can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint8, and bool."
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprocess_and_save_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[8], line 22\u001b[0m, in \u001b[0;36mprocess_and_save_data\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m eval_data \u001b[38;5;241m=\u001b[39m timestep_construct_optimized(eval_data)\n\u001b[1;32m     21\u001b[0m eval_dataset \u001b[38;5;241m=\u001b[39m data_to_tensor(eval_data)   \n\u001b[0;32m---> 22\u001b[0m eval_df \u001b[38;5;241m=\u001b[39m \u001b[43mtensor_dataset_to_dataframe\u001b[49m\u001b[43m(\u001b[49m\u001b[43meval_dataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeature_names\u001b[49m\u001b[43m)\u001b[49m    \n\u001b[1;32m     23\u001b[0m eval_df\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconstructed_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124meval_dataset_constructed_t_1h.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[7], line 17\u001b[0m, in \u001b[0;36mtensor_dataset_to_dataframe\u001b[0;34m(tensor_dataset, feature_names)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m targets \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     15\u001b[0m     features_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m targets\u001b[38;5;241m.\u001b[39mnumpy()\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfeatures_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m features_df\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object is not callable"
      ]
     }
    ],
