--- a/snippets/LSTM_v2.ipynb
+++ b/snippets/LSTM_v2.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +68,7 @@
     "    data = pd.read_csv(filepath)\n",
     "    features = data[feature_names].values\n",
     "    features_tensor = torch.tensor(features, dtype=torch.float32).unsqueeze(1)\n",
+    "    print(features_tensor.shape)\n",
     "\n",
     "    if train:\n",
     "        targets = data[target_name].values\n",
@@ -76,11 +77,26 @@
     "    else:\n",
     "        dataset = TensorDataset(features_tensor)\n",
     "\n",
-    "    return DataLoader(dataset, batch_size=batch_size, shuffle=shuffle)\n",
-    "\n",
-    "train_loader = load_dataset(f'{inputdir}train_dataset_constructed.csv', feature_names)\n",
+    "    return DataLoader(dataset, batch_size=batch_size, shuffle=shuffle)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1422638, 1, 11])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train_loader = load_dataset(f'{inputdir}train_dataset_constructed.csv', feature_names)\n",
     "eval_loader = load_dataset(f'{inputdir}eval_dataset_constructed.csv', feature_names)\n",
-    "test_loader = load_dataset(f'{inputdir}test_dataset_constructed_x.csv', feature_names, train=False)\n"
+    "# test_loader = load_dataset(f'{inputdir}test_dataset_constructed_x.csv', feature_names, train=False)"
    ]
   },
   {
