--- a/snippets/temporal_data_process_STGNN.ipynb
+++ b/snippets/temporal_data_process_STGNN.ipynb
@@ -323,6 +323,41 @@
     "    \n",
     "# constructed_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # model.train()\n",
+    "    # for epoch in range(start_epoch, num_epochs + start_epoch):\n",
+    "    #     # for batch_idx, (inputs, targets) in tqdm(enumerate(train_loader), desc=\"Training\"):\n",
+    "    #     for batch_idx, (inputs, targets) in enumerate(train_loader):\n",
+    "    #         inputs, targets = inputs.to(device), targets.to(device)\n",
+    "    #         optimizer.zero_grad()\n",
+    "    #         output = model(inputs, adjacency_matrix)\n",
+    "    #         # print(f'output: {output.shape}, target:{targets.shape}')\n",
+    "    #         loss = criterion(output, targets)\n",
+    "    #         loss.backward()\n",
+    "    #         optimizer.step()\n",
+    "    #         # 在 TensorBoard 中记录损失\n",
+    "    #         if batch_idx % log_interval == 0:\n",
+    "    #             writer.add_scalar('Loss/train', loss.item(), epoch * len(train_loader) + batch_idx)\n",
+    "            \n",
+    "    #         # print(f'Epoch {epoch}, Batch {batch_idx+1}, Loss: {loss.item()}')\n",
+    "    #         # 定期保存检查点\n",
+    "    #         if batch_idx % 100 == 0:\n",
+    "    #             print(f'Epoch {epoch}, Batch {batch_idx+1}, Loss: {loss.item()}')\n",
+    "    #             torch.save({\n",
+    "    #                 'epoch': epoch,\n",
+    "    #                 'model_state_dict': model.state_dict(),\n",
+    "    #                 'optimizer_state_dict': optimizer.state_dict(),\n",
+    "    #                 'loss': loss.item(),\n",
+    "    #             }, checkpoint_path)\n",
+    "    # # 关闭 TensorBoard 记录器\n",
+    "    # writer.close()"
+   ]
   }
  ],
  "metadata": {
